feat(ui): roles edition